Can add new space

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -18,6 +18,7 @@
   <script src="spec/SpecHelper.js"></script>
   <script src="spec/validationSpec.js"></script>
   <script src="spec/spacesSpec.js"></script>
+  <script src="spec/addSpaceSpec.js"></script>
 
 </head>
 
